# src/dtos/cash.dto.ts
@@ -1,0 +1,13 @@
+import { IsString } from "class-validator";
+
+export class CashManagementDto {
+    @IsString()
+    public amount: string;
+  
+    @IsString()
+    public notes: string;
+  
+    @IsString()
+    public type: string;
+
+}
